url path cosmetics

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://tbalint99.github.io/image-webshop/",
+  "homepage": "https://tbalint99.github.io/",
   "name": "image-webshop",
   "version": "0.1.0",
   "private": true,
